# offkai-manager

./: .gitignore  README.md  main.py  pyproject.toml
data/: offkai_panel_content.json
docs/: swagger.json
offkai_manager/: __init__.py  config.py  nocodb_api.py  nocodb_repo.py  offkai.py  storage.py
scripts/: sync_paid_from_csv.py
